feat(environment): Created dev environment
Added browser reload and watch scripts to ease the development of testpages and normal code

BREAKING CHANGE: Non-minified build is now removed

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Split text example</title>
+  <title>Split article example</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="style.css" />
-  <script src="../dist/split-article.js"></script>
 </head>
 <body>
   <div id="source">
@@ -87,8 +86,10 @@
     <div class="container typeA"></div>
   </div>
   
+  <!-- script:live-reload -->
+  <script src="/split-article.js"></script>
   <script>
-splitArticle({
+var splitArticle = new SplitArticle({
   source: document.getElementById('source'),
   target: document.getElementById('target')
 });
