test(testpage): Changed script url in testpage
Changed script url in examples, so that it would work without the testserver

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -87,7 +87,7 @@
   </div>
   
   <!-- script:live-reload -->
-  <script src="/split-article.js"></script>
+  <script src="../../dist/split-article.js"></script>
   <script>
 var splitArticle = new SplitArticle({
   source: document.getElementById('source'),
