feat(calculation): Created a bunch of methods, which can give proper measures on an element
Also added throttle, which will help in holding back the spamming of resize event

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -91,7 +91,7 @@
   <script>
 var splitArticle = new SplitArticle({
   source: document.getElementById('source'),
-  target: document.getElementById('target')
+  targets: Array.from(document.getElementById('target').querySelectorAll('.container'))
 })
   </script>
 </body>
