feat(api): Dropped OOP and changed the module into a simple function
Added watch as a static function

BREAKING CHANGE: SplitArticle is no longer a class, but a function and it now starts with a lower
case s

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -89,7 +89,7 @@
   <!-- script:live-reload -->
   <script src="../../dist/split-article.js"></script>
   <script>
-var splitArticle = new SplitArticle({
+splitArticle({
   source: document.getElementById('source'),
   targets: Array.from(document.getElementById('target').querySelectorAll('.container'))
 })
