--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -89,7 +89,7 @@
   <!-- script:live-reload -->
   <script src="../../dist/split-article.js"></script>
   <script>
-splitArticle({
+splitArticle.watch({
   source: document.getElementById('source'),
   targets: Array.from(document.getElementById('target').querySelectorAll('.container'))
 })
