feat(config): Added speed attribute to config
The throttling speed can be set with this

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -91,7 +91,8 @@
   <script>
 splitArticle.watch({
   source: document.getElementById('source'),
-  targets: Array.from(document.getElementById('target').querySelectorAll('.container'))
+  targets: Array.from(document.getElementById('target').querySelectorAll('.container')),
+  speed: 200
 })
   </script>
 </body>
