feat(config): Added limit and offset options and updated readme
limit and offset narrows the amount of source elements, that will be moved to the targets

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -92,7 +92,7 @@
 splitArticle.watch({
   source: document.getElementById('source'),
   targets: Array.from(document.getElementById('target').querySelectorAll('.container')),
-  speed: 200
+  limit: 15
 })
   </script>
 </body>
