feat(rendering): Implemented proper ordering for multiple columns per target

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -92,7 +92,8 @@
 splitArticle.watch({
   source: document.getElementById('source'),
   targets: Array.from(document.getElementById('target').querySelectorAll('.container')),
-  limit: 15
+  // limit: 15,
+  width: 50
 })
   </script>
 </body>
