fix(main): Added pre-filter for targets to remove elements, which are too little in height
The code will now try to filter out targets, which are too short to display any text and will hide
them. Also added a few checks to make sure the code only splits text, when there is more, than 1
valid target

closes #2

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -77,12 +77,14 @@
   </div>
   <div id="target">
     <div class="container typeA"></div>
-    <div class="container typeA"></div>
     <div class="container typeB"></div>
     <div class="container typeA"></div>
     <div class="container typeC"></div>
     <div class="container typeA"></div>
     <div class="container typeD"></div>
+    <div class="container typeA"></div>
+    <div class="container typeE"></div>
+    <div class="container typeF"></div>
     <div class="container typeA"></div>
   </div>
   
