chore(package): Updated versions of the dependencies, plus updated examples server

--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -4,6 +4,7 @@
   <title>Split article example</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="style.css" />
+  <script src="load-reload.js"></script>
 </head>
 <body>
   <div id="source">
@@ -88,7 +89,6 @@
     <div class="container typeA"></div>
   </div>
   
-  <!-- script:live-reload -->
   <script src="../../dist/split-article.js"></script>
   <script>
 splitArticle.watch({
